# armai-shared

./: .gitignore  .gitlab-ci.yml  Dockerfile.base  README.md  pyproject.toml
.github/workflows/: base-image.yml
models/: __init__.py  pyproject.toml
models/armai_models.egg-info/: PKG-INFO  SOURCES.txt
models/shared_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared/: __init__.py  channel_contracts.py  constants.py  crypto.py
