[project]
name = "armai-shared"
version = "0.1.0"
description = "Shared Python utilities and models for the ARMAI platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.0",
    "cryptography>=42.0.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared", "shared.*"]
